--- a/output/dados-first-post.html
+++ b/output/dados-first-post.html
@@ -10,7 +10,7 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">marukun</a></h1>
+                <h1><a href="/">Dado</a></h1>
                 <nav><ul>
                     <li class="active"><a href="/category/dado.html">dado</a></li>
                 </ul></nav>
