--- a/output/archives.html
+++ b/output/archives.html
@@ -20,6 +20,8 @@
 <dl>
     <dt>Mon 23 August 2021</dt>
     <dd><a href="/dados-first-post.html">dados first post</a></dd>
+    <dt>Mon 23 August 2021</dt>
+    <dd><a href="/dados-second-post.html">dados second post</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
