play with siteurls

--- a/output/dados-second-post.html
+++ b/output/dados-second-post.html
@@ -35,7 +35,8 @@
 <p>In <a href="https://kujiranoai.github.io/pelicantest/category/dado.html">dado</a>.</p>
 <p>tags: <a href="https://kujiranoai.github.io/pelicantest/tag/ok.html">ok</a> </p>
 </footer><!-- /.post-info -->      <h2>This is the second time</h2>
-<p>this is a copy small change</p>
+<p>this is inserted by me
+this is a copy small change and another small change</p>
     </div><!-- /.entry-content -->
 
   </article>
