--- a/output/dados-first-post.html
+++ b/output/dados-first-post.html
@@ -35,11 +35,8 @@
 <p>In <a href="https://kujiranoai.github.io/pelicantest/category/dado.html">dado</a>.</p>
 <p>tags: <a href="https://kujiranoai.github.io/pelicantest/tag/ok.html">ok</a> </p>
 </footer><!-- /.post-info -->      <h2>This is the heading</h2>
-<p>This is a numbered list using markdown
-1. number one
-2. number two
-3. three for luck</p>
-<p>This is the content of my blog which I can simply write as a text file and have uploaded into github pages</p>
+<p>and this is inserted by me
+This is a numbered list using markdown</p>
     </div><!-- /.entry-content -->
 
   </article>
